# Milestone-1

./: .env.example  .gitignore  argv.json  pyproject.toml
Docs/: phase-wise-architecture.md
Docs/Phase2/: implementation_plan.md  task.md  walkthrough.md
deployment/streamlit/: requirements.txt  streamlit_app.py
deployment/vercel/: index.html  vercel.json
deployment/vercel/api/: index.py
deployment/vercel/data/processed/: restaurants.parquet
deployment/vercel/public/: app.js
deployment/vercel/src/restaurant_rec/: config.py
deployment/vercel/src/restaurant_rec/phase1/: validators.py
deployment/vercel/src/restaurant_rec/phase2/: filter.py  preferences.py
deployment/vercel/src/restaurant_rec/phase3/: __init__.py
deployment/vercel/src/restaurant_rec/phase4/: app.py
deployment/vercel/src/restaurant_rec/phase4/static/: app.js  style.css
extensions/: extensions.json
extensions/ms-python.debugpy-2025.18.0-win32-x64/: package.json
extensions/ms-python.python-2026.4.0-universal/: package.json
extensions/ms-python.vscode-python-envs-1.20.1-universal/: package.json
scripts/: list_models.py  peek_catalog.py  simple_llm_test.py  verify_llm.py
scripts/Phase1/: ingest_zomato.py
src/restaurant_rec/: config.py
src/restaurant_rec/phase1/: schema.py  transformers.py
src/restaurant_rec/phase2/: __init__.py  catalog_loader.py
src/restaurant_rec/phase3/: client.py  prompts.py  recommender.py
src/restaurant_rec/phase5/: __init__.py
tests/phase2/: test_phase2.py
tests/phase3/: test_recommender.py
tests/phase4/: test_api_manual.py
