[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "restaurant_rec"
version = "0.1.0"
description = "AI-Powered Restaurant Recommendation System"
authors = [
    {name = "Antigravity", email = "ai@example.com"},
]
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "datasets>=2.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tqdm>=4.66.0",
    "groq>=0.5.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
